fix(#11): remove scrollbar

--- a/src/components/sections/team/team.module.css
+++ b/src/components/sections/team/team.module.css
@@ -24,7 +24,7 @@
   list-style: none;
   display: flex;
   column-gap: 53px;
-  overflow-x: visible;
+  /* overflow-x: visible; */
 }
 
 .member {
